--- a/package.json
+++ b/package.json
@@ -11,13 +11,26 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.1.6",
+    "vite": "^3.0.0",
     "@dhis2/cli-app-scripts": "^10.1.5"
   },
   "dependencies": {
     "@dhis2/app-runtime": "^3.7.0",
+    
     "@dhis2/ui": "^8.7.0",
     "bootstrap": "^5.2.3",
     "react-bootstrap": "^2.6.0",
-    "react-collapsible": "^2.10.0"
+    "react-collapsible": "^2.10.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "aos": "^3.0.0-beta.6",
+    "react-flatpickr": "^3.10.13",
+    "react-router-dom": "^6.3.0",
+    "react-transition-group": "^4.4.2",
+    "sticky-js": "^1.3.0"
   }
 }
